backend in progress

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,11 +13,16 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
 
   </head>
-  <body>
+  <body classname="body">
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <style>
+    .body {
+      background-image: "https://media-cdn.tripadvisor.com/media/photo-s/15/e9/16/d6/laico-tunis.jpg";
+    }
+  </style>
 </html>
